# uav_ds

./: .gitignore  IMPLEMENTATION_STRATEGY.md  README.md  TODO.md  check_slam.sh  run_simulation.sh  test_flight.py
docs/: create_flight_pkg.sh  create_pkg.sh
docs/px4_tf_broadcaster/: CMakeLists.txt  frames_2026-01-27_15.36.14.gv  frames_2026-01-27_15.41.46.gv  frames_2026-02-03_14.36.14.gv  frames_2026-02-03_14.48.11.gv  frames_2026-02-03_14.51.10.gv  frames_2026-02-03_14.53.28.gv  frames_2026-02-03_14.54.59.gv  frames_2026-02-03_15.04.14.gv  package.xml
docs/px4_tf_broadcaster/launch/: sentinel_slam.launch.py
docs/px4_tf_broadcaster/src/: px4_tf_broadcaster.cpp
docs/px4_tf_broadcaster/src/urdf/: x500_depth.urdf
docs/sentinel_agent/: CMakeLists.txt  package.xml
docs/sentinel_agent/src/: AgentNode.cpp
docs/sentinel_brain/: CMakeLists.txt  package.xml
docs/sentinel_brain/src/: mission_manager.cpp
docs/sentinel_interfaces/: CMakeLists.txt  package.xml
docs/sentinel_interfaces/msg/: DeliveryTask.msg  TaskFeedback.msg
ros2_ws/: frames_2026-02-10_17.14.09.gv  setup_bt_env.sh  setup_dependencies.sh
ros2_ws/src/flight_core/: CMakeLists.txt  package.xml
ros2_ws/src/flight_core/action/: Land.action  MoveTo.action  Takeoff.action
ros2_ws/src/flight_core/include/flight_core/: flight_core.hpp  flight_fsm.hpp  px4_interface.hpp  types.hpp
ros2_ws/src/flight_core/msg/: ArucoMarker.msg  ArucoMarkers.msg  LandingTarget.msg  UavState.msg  YoloDetection.msg
ros2_ws/src/flight_core/src/: flight_core.cpp  flight_fsm.cpp  main.cpp  px4_interface.cpp
ros2_ws/src/mission_orchestrator/: package.xml  setup.cfg  setup.py
ros2_ws/src/mission_orchestrator/launch/: orchestrator.launch.py
ros2_ws/src/mission_orchestrator/mission_orchestrator/: __init__.py  intent_engine.py  orchestrator_node.py  state_models.py
ros2_ws/src/uav_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/uav_bringup/launch/: tf_setup.launch.py  uav_system.launch.py
ros2_ws/src/uav_bringup/nodes/: tf_broadcaster.py
ros2_ws/src/uav_bringup/urdf/: x500_delivery.urdf
ros2_ws/src/uav_bt_agent/: CMakeLists.txt  package.xml
ros2_ws/src/uav_bt_agent/config/: delivery_tree.xml  simple_flight_tree.xml
ros2_ws/src/uav_bt_agent/include/uav_bt_agent/: simple_flight_mission.hpp
ros2_ws/src/uav_bt_agent/include/uav_bt_agent/plugins/: common_types.hpp
ros2_ws/src/uav_bt_agent/include/uav_bt_agent/plugins/action/: follow_path_action.hpp  land_action.hpp  move_to_action.hpp  plan_path_action.hpp  precision_land_action.hpp  search_marker_action.hpp  takeoff_action.hpp
ros2_ws/src/uav_bt_agent/launch/: uds_mission.launch.py
ros2_ws/src/uav_bt_agent/src/: main.cpp  simple_flight_mission.cpp
ros2_ws/src/uav_bt_agent/src/plugins/action/: follow_path_action.cpp  land_action.cpp  move_to_action.cpp  plan_path_action.cpp  precision_land_action.cpp  search_marker_action.cpp  takeoff_action.cpp
ros2_ws/src/uav_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/uav_navigation/config/: planner_params.yaml
ros2_ws/src/uav_navigation/launch/: path_planner.launch.py
ros2_ws/src/uav_navigation/nodes/: path_planner.py
ros2_ws/src/uav_navigation/srv/: PlanPath.srv
ros2_ws/src/uav_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/uav_perception/scripts/: train_landing_pad.py
ros2_ws/src/uav_perception/scripts/datasets/landing_pad/: README.dataset.txt  README.roboflow.txt  data.yaml
ros2_ws/src/uav_perception/scripts/datasets/landing_pad/train/: labels.cache
ros2_ws/src/uav_perception/scripts/datasets/landing_pad/train/labels/: test3_mp4-0001_jpg.rf.1ec9e392567ff4a3da16f278e3eff845.txt  test3_mp4-0001_jpg.rf.d16f91db35102175dd495092fc3a37bd.txt  test3_mp4-0002_jpg.rf.032c672109a55ef9f00054f8762c40e4.txt  test3_mp4-0002_jpg.rf.095928fab70ac66ca70ea5443c81c245.txt  test3_mp4-0002_jpg.rf.9dbe73996075c9aea0ce1f0e67660173.txt  test3_mp4-0003_jpg.rf.58f7831ef914cb578435433717288234.txt  test3_mp4-0003_jpg.rf.bc67e01af740dfc95ee5f5f23b22e5f5.txt  test3_mp4-0004_jpg.rf.7c83fc01edd3d483e989ffd203368c7f.txt  test3_mp4-0004_jpg.rf.7d76a57d47307083689e0b64303955f5.txt  test3_mp4-0004_jpg.rf.c4abe6f92adeefe885d04347c565d7e3.txt  test3_mp4-0005_jpg.rf.52883c3a30adbdeb48504e20b7b0fd49.txt  test3_mp4-0005_jpg.rf.796e92db7b75b27212abbc6e7e5a3b9b.txt  test3_mp4-0005_jpg.rf.9090864b61d0b265f7968e0957be8432.txt  test3_mp4-0008_jpg.rf.15624e3803b100ebc27b755ac67db773.txt  test3_mp4-0008_jpg.rf.33c5cec7364e26edaeb42546f0d26065.txt  test3_mp4-0008_jpg.rf.8255f0f7f0cf7e99f53d9ff82951328f.txt  (+344 more)
ros2_ws/src/uav_perception/scripts/datasets/landing_pad/valid/: labels.cache
ros2_ws/src/uav_perception/scripts/runs/detect/landing_pad/: args.yaml
ros2_ws/src/uav_perception/scripts/runs/detect/landing_pad2/: args.yaml  results.csv
ros2_ws/src/uav_perception/uav_perception/: aruco_detector.py  marker_fuser.py  yolo_detector.py
ros2_ws/src/uav_simulation/: CMakeLists.txt  generate_marker.py  package.xml
ros2_ws/src/uav_simulation/launch/: bridge.yaml  simulation.launch.py
ros2_ws/src/uav_simulation/models/arucotag/: model.config  model.sdf
ros2_ws/src/uav_simulation/models/x500_delivery/: model.config  model.sdf
ros2_ws/src/uav_simulation/worlds/: urban_delivery.sdf
ros2_ws/src/uav_slam/: CMakeLists.txt  package.xml
ros2_ws/src/uav_slam/config/: octomap.yaml  velodyne_16.yaml
ros2_ws/src/uav_slam/launch/: fast_lio.launch.py  octomap.launch.py
ros2_ws/src/uav_slam/nodes/: pointcloud_timestamp_injector.py
ros2_ws/src/uav_web_agent/: CMakeLists.txt  package.xml
ros2_ws/src/uav_web_agent/include/uav_web_agent/: web_agent_node.hpp
ros2_ws/src/uav_web_agent/msg/: DeliveryMission.msg  MissionIntent.msg  MissionStatus.msg  OperatorCommand.msg
ros2_ws/src/uav_web_agent/src/: main.cpp  web_agent_node.cpp
web_backend/: requirements.txt
web_backend/app/: __init__.py  main.py  models.py
web_backend/app/routers/: __init__.py  orders.py
web_backend/app/services/: __init__.py  robot_gateway.py  scheduler.py
web_backend/app/templates/: index.html
(+31 files in other folders)
