<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>px4_tf_broadcaster</name>
  <version>0.0.0</version>

  <description>
    PX4 VehicleOdometry to ROS2 TF broadcaster (odom -> base_link)
  </description>

  <maintainer email="tuyihugy@gmail.com">wss</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build & run dependencies -->
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <!-- Test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>