<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentinel_agent</name>
  <version>0.1.0</version>
  <description>Drone Agent node for cloud communication and task dispatching</description>
  <maintainer email="tuyihugy@gmail.com">wss</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>sentinel_interfaces</depend>

  <depend>nlohmann-json-dev</depend> <depend>libcurl</depend>           <export>
  <build_type>ament_cmake</build_type>
</export>
</package>