<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentinel_brain</name>
  <version>0.1.0</version>
  <description>The decision-making brain of the sentinel drone system</description>
  <maintainer email="tuyihugy@gmail.com">wss</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sentinel_interfaces</depend>
  <depend>flight_core</depend> <export>
  <build_type>ament_cmake</build_type>
</export>
</package>