<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_orchestrator</name>
  <version>0.1.0</version>
  <description>Mission Orchestrator: runtime intent decisions for UAV delivery</description>
  <maintainer email="wss@uav.dev">wss</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>uav_web_agent</exec_depend>
  <exec_depend>flight_core</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
