<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_bt_agent</name>
  <version>0.1.0</version>
  <description>BehaviorTree-based UAV agent that commands flight_core (takeoff -> move -> land).</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>flight_core</depend>
  <depend>uav_web_agent</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
