<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_bt_agent</name>
  <version>0.1.0</version>
  <description>BehaviorTree-based UAV agent that commands flight_core (takeoff -> move -> land).</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>uav_web_agent</depend>
  <depend>behaviortree_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>flight_core</depend>
  <depend>uav_navigation</depend>
  <exec_depend>uav_perception</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
